# Elf_final

./: CMakeLists.txt  Config.h  Elf_final64.h  Elf_final64_nodelevel_enqueue.h  Elf_final64_subtree.h  Imprint.cpp  Imprint.h  ImprintSIMD64WithoutCompression.h  ImprintSIMDWithoutCompression.h  ImprintWithoutCompression.h  Index.h  MyKDTreeSmall.h  README.md  SafeQueue.h  Store.h  ThreadPool.h  Util.h  benchmark.h  bitweaving.cpp  bitweaving.h  colseqscan.h  configure.sh  main.cpp  seqscan.h  simdseqscan.h  sortedProjections.h  tpc_h.h
SortingEngine/: introSort.h  radixSort.h  sortingEngine.h  sortingEngineUtils.h
Utils/: configs.h  structures.h
bitweaving-lib/: AUTHORS  COPYRIGHT  Doxyfile  Makefile  README  configure.in  configure.sh
bitweaving-lib/examples/: Makefile  simple.cpp  speed.cpp
bitweaving-lib/include/bitweaving/: bitvector.h  column.h  iterator.h  options.h  status.h  table.h  types.h
bitweaving-lib/src/: bitvector.cpp  bitvector_block.cpp  bitvector_block.h  bitvector_iterator.cpp  bitvector_iterator.h  bitwise.h  bwh_column_block.cpp  bwh_column_block.h  bwh_column_iterator.cpp  bwh_column_iterator.h  bwv_column_block.cpp  bwv_column_block.h  bwv_column_iterator.cpp  bwv_column_iterator.h  column.cpp  column_block.h  column_iterator.cpp  column_iterator.h  env.cpp  env.h  file.cpp  file.h  iterator.cpp  naive_column_block.cpp  naive_column_block.h  options.cpp  status.cpp  table.cpp  utility.cpp  utility.h
bitweaving-lib/tests/: bitvector_iterator_test.cpp  bwh_column_block_param_test.cpp  bwh_column_block_test.cpp  bwv_column_block_param_test.cpp  bwv_column_block_test.cpp  iterator_param_test.cpp  iterator_test.cpp  table_test.cpp
